# fckappl

./: .gitignore  .gitignore.bak  README.md  fckappl-ontology.ttl  pyproject.toml  requirements-dev.txt  setup.py
fckappl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/fckappl/: __main__.py
src/fckappl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli.py  test_install.py
