[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fckappl"
version = "0.1.0"
description = "A package to mitigate macOS's annoying habit of flipping configuration switches unnecessarily. Use this if your last known good is better than Apple's erroneous and disruptive last known good."
authors = [
  { name="Lou Springer", email="lou@louspinger.com" }
]
dependencies = [
  "watchdog",
  "typer"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
fckappl = "fckappl.__main__:app" 